<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_circle_range"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/_25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/how_would_you_like_to_log_in"
        android:textSize="@dimen/_15sp" />

    <LinearLayout
        android:id="@+id/login_with_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/tp_login_bg_circle_range"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <ImageView
            android:layout_width="@dimen/_25dp"
            android:layout_height="@dimen/_25dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="@dimen/_170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25dp"
            android:text="@string/log_in_with_email" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_with_apple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/tp_login_bg_circle_range"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <ImageView
            android:layout_width="@dimen/_25dp"
            android:layout_height="@dimen/_25dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="@dimen/_170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25dp"
            android:text="@string/continue_with_apple" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_with_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/tp_login_bg_circle_range"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <ImageView
            android:layout_width="@dimen/_25dp"
            android:layout_height="@dimen/_25dp"
            android:src="@mipmap/ic_launcher" />

        <com.facebook.login.widget.LoginButton
            android:background="@color/white"
            android:layout_width="@dimen/_170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25dp"
            android:text="@string/continue_with_facebook" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/tp_login_bg_circle_range"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <ImageView
            android:layout_width="@dimen/_25dp"
            android:layout_height="@dimen/_25dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="@dimen/_170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25dp"
            android:text="@string/continue_with_google" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/line_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15dp"
            android:layout_marginRight="@dimen/_15dp"
            android:text="@string/or"
            android:textColor="@color/line_gray" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/line_gray" />
    </LinearLayout>

    <TextView
        android:layout_width="@dimen/_170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/bg_blue" />

    <TextView
        android:id="@+id/tp_login_dialog_sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/login_btn_circle_range"
        android:gravity="center"
        android:text="@string/sigh_up_no_underline"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp" />

</LinearLayout>